src/harness-vs-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app.kubernetes.io/instance: harness
    app.kubernetes.io/managed-by: Helm
  name: harness-chaos-vs
  namespace: harness
spec:
  gateways:
  - istio-system/public
  hosts:
  - smp-istio.test.harness.io
  http:
  - match:
    - uri:
        prefix: /chaos/driver/api/
    - uri:
        prefix: /chaos/driver/api
    name: chaos-driver-service
    rewrite:
      uri: /
    route:
    - destination:
        host: chaos-driver-service
        port:
          number: 9000
  - match:
    - uri:
        prefix: /chaos/manager/api/
    - uri:
        prefix: /chaos/manager/api
    name: chaos-manager-service
    rewrite:
      uri: /
    route:
    - destination:
        host: chaos-manager-service
        port:
          number: 8080
  - match:
    - uri:
        prefix: /chaos/
    - uri:
        prefix: /chaos
    name: chaos-web-service
    rewrite:
      uri: /
    route:
    - destination:
        host: chaos-web-service
        port:
          number: 8184
  - match:
    - uri:
        prefix: /chaos/kserver/api/
    - uri:
        prefix: /chaos/kserver/api
    name: chaos-k8s-ifs-service
    rewrite:
      uri: /
    route:
    - destination:
        host: chaos-k8s-ifs-service
        port:
          number: 6000
